# OpenGov-EarlyJapanese

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
opengov_earlyjapanese/: __init__.py  __main__.py  cli.py  config.py
opengov_earlyjapanese/api/: main.py
opengov_earlyjapanese/core/: __init__.py  grammar.py  hiragana.py  kanji.py  katakana.py  models.py  srs.py
opengov_earlyjapanese/ui/: app.py
opengov_earlyjapanese/utils/: logger.py
src/opengov_earlyjapanese/tui/: __init__.py
tests/: test_smoke.py
tests/unit/: test_api.py  test_cli.py  test_cli_complete.py  test_cli_edge_cases.py  test_cli_errors.py  test_config.py  test_grammar.py  test_hiragana.py  test_kanji.py  test_katakana.py  test_logger.py  test_logger_fallback.py  test_main.py  test_srs.py
